<resources>
    <string name="app_name">食通宝</string>
    <string name="open_table">开台</string>
    <string name="check">结账</string>
    <string name="check_self">单台结账</string>
    <string name="check_all">并台结账</string>
    <string name="pre_print">预打印</string>
    <string name="order">下单</string>
    <string name="first_order">先送</string>
    <string name="table_status1">台&#160;&#160;况</string>
    <string name="table_status">台况 ESC</string>
    <string name="dining_table_processing">餐台处理</string>
    <string name="publish">出品</string>
    <string name="network_orders">网络订单</string>
    <string name="operate">管理</string>
    <string name="member_management">会员</string>
    <string name="system_function">系统功能</string>
    <string name="business_function">营业功能</string>
    <string name="bill_preprint">预打账单</string>
    <string name="title_activity_table_status">TableStatusActivity</string>
    <string name="table_open_number">开台单号</string>
    <string name="table_open_time">开台时间</string>
    <string name="table_open_remark">开台备注</string>
    <string name="table_open_person">开台单号</string>
    <string name="table_spending">消费</string>
    <string name="table_discount">开台单号</string>
    <string name="table_free">赠送</string>
    <string name="table_coupon_to_use">可用代金券</string>
    <string name="table_deposit">押金</string>
    <string name="table_coupon_earn">可发礼劵</string>
    <string name="table_payable">应收</string>
    <string name="table_paid">已收</string>
    <string name="table_pay_in_advance">预收</string>
    <string name="table_not_paid">待收</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="cancel_order">撤销</string>
    <string name="save_order">存单</string>
    <string name="fetch_order">取单</string>
    <string name="order_number">行</string>
    <string name="order_name">菜品</string>
    <string name="order_quantity">数量</string>
    <string name="order_void">退量</string>
    <string name="order_price">￥100</string>
    <string name="order_additional_price">加价</string>
    <string name="order_free">赠送 F4</string>
    <string name="order_special_price">特价</string>
    <string name="order_net_amount">实际金额</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_main_screen">主页</string>
    <string name="action_exit">退出</string>
    <string name="core_apps_installed">服务器安装完毕</string>
    <string name="install_failed">服务器安装失败</string>
    <string name="installing_core_apps">正在安装代理服务器程序</string>
    <string name="starting_core_apps">正在启动代理服务器程序</string>
    <string name="people">人</string>
    <string name="core_apps">配置服务器程序</string>
    <string-array name="login_error_dialog">
        <item>确定</item>
        <item>取消</item>
    </string-array>
    <string name="login_error">登录错误</string>
    <string name="unlock_table">解锁</string>
    <string name="freeTable">空台</string>
    <string name="usingTable">在用</string>
    <string name="prePrintTable">预打</string>
    <string name="device_name">设备名:</string>
    <string name="ip">IP:</string>
    <string name="printer_settting">打印机</string>
    <string name="cloud_service">云服务</string>
    <string name="intranet">局域网</string>
    <string name="general_setting">一般设置</string>
    <string name="setting">设置</string>
    <string name="share">共享</string>
    <string name="printer">打印机</string>
    <string name="agent_service">代理服务</string>
    <string name="agent_address">代理地址</string>
    <string name="isregister">此机是否注册</string>
    <string name="order_option">下单选项</string>
    <string name="is_public_device">此机是否为公共用机</string>
    <string name="available_private_cook_method">是否转入常用做法</string>
    <string name="setting_local_usb_printer">共享本地USB打印机</string>
    <string name="setting_local_gorge_printer">共享本地串口打印机</string>
    <string name="setting_local_baud">设置本地串口波特率</string>
    <string name="select_network_printer">选择本地小票打印机</string>
    <string name="is_register">是否已经登记</string>
    <string name="order_setting">下单设置</string>
    <string name="member_change_psd">密码修改</string>
    <string name="local_setting">设置</string>
    <string name="update_password">修改密码</string>
    <string name="store_manage">门店管理</string>
    <string name="open_money_box">钱箱</string>
    <string name="device_check">设备检测</string>
    <string name="back_manager">后台</string>
    <string name="buy_manage">采购管理</string>
    <string name="business_daily">日结</string>
    <string name="today_bills">今日账单</string>
    <string name="business_succession">交接</string>
    <string name="reserve_manage">预定管理</string>
    <string name="manager_query">经理查询</string>
    <string name="slod_out_manage">沽清</string>
    <string name="cancel1">&#160;&#160;取&#160;&#160;消&#160;&#160;</string>
    <string name="sure1">&#160;&#160;确&#160;&#160;定&#160;&#160;</string>
    <string name="member_card_rfid">RFID</string>
    <string name="member_type">会员类型</string>
    <string name="sex">性别</string>
    <string name="documents_type">证件类型</string>
    <string name="birthday">出生年月</string>
    <string name="contact_number">联系电话</string>
    <string name="phone">手机</string>
    <string name="pay_pwd">支付密码</string>
    <string name="sure_pwd_again">确认密码</string>
    <string name="recharge_amount">充值金额</string>
    <string name="member_recharge">会员充值</string>
    <string name="member_create">会员发卡</string>
    <string name="member_recede_card">会员退卡</string>
    <string name="member_query">会员查询</string>
    <string name="member_recharge_detail">充值流水</string>
    <string name="member_recede_card_detail">退卡明细</string>
    <string name="member_activity">会员活动</string>
    <string name="member_transfer">会员转账</string>
    <string name="member_number">会员编号</string>
    <string name="documents_number">证件号码</string>
    <string name="member_card_number">会员卡号</string>
    <string name="member_name">会员名称</string>
    <string name="sale">营销员     :</string>
    <string name="recharge_number_type">充值号码类型</string>
    <string name="recharge_activity">充值活动</string>
    <string name="member_balance">卡面余额</string>
    <string name="recharge_number">充值号码</string>
    <string name="recharge_type">充值类型</string>
    <string name="set_password">设置卡密码</string>
    <string name="save_and_create">发卡</string>
    <string name="cancel_save">放弃</string>
    <string name="member_number1">编号:&#160;&#160;</string>
    <string name="member_card_number1">卡号:&#160;&#160;</string>
    <string name="member_name1">名称:&#160;&#160;</string>
    <string name="member_balance1">账户:&#160;&#160;</string>
    <string name="gift_balance1">账户:&#160;&#160;</string>
    <string name="member_phonenumber1">手机:&#160;&#160;</string>
    <string name="member_type1">类型:&#160;&#160;</string>
    <string name="account_balance1">余额:&#160;&#160;</string>
    <string name="sure">确定</string>
    <string name="sets_conditions">台况</string>
    <string name="all_method">全部做法</string>
    <string name="private_cookmethed">常用做法</string>
    <string name="please_input_host_address">请输入主机地址</string>
    <string name="nower_user">当前用户:</string>
    <string name="AgentID">工号:</string>
    <string name="member_phonenumber">手机号码</string>
    <string name="sz_sanyipos">深圳市彩虹云宝网络有限公司</string>
    <string name="catering_management_system_software">餐饮软件管理系统</string>
    <string name="cancelled">注销</string>
    <string name="old_password">原始密码:</string>
    <string name="old_password_hint">原始密码(三位数)</string>
    <string name="new_password">新密码:</string>
    <string name="write_password_only_number">填写密码(仅支持数字)</string>
    <string name="sure_password">确认密码:</string>
    <string name="sure_password_hint">再次填写确认</string>
    <string name="dishs">菜品</string>
    <string name="original_price">原价</string>
    <string name="please_input">请输入</string>
    <string name="new_price">新价</string>
    <string name="numpad_1">1</string>
    <string name="numpad_2">2</string>
    <string name="numpad_3">3</string>
    <string name="numpad_4">4</string>
    <string name="numpad_5">5</string>
    <string name="numpad_6">6</string>
    <string name="numpad_7">7</string>
    <string name="numpad_8">8</string>
    <string name="numpad_9">9</string>
    <string name="numpad_0">0</string>
    <string name="letterKey_c">C</string>
    <string name="mark">号</string>
    <string name="payment_method">付款方式</string>
    <string name="amount">金额</string>
    <string name="change">找零</string>
    <string name="payment_voucher">付款凭证</string>
    <string name="accredit_verify">授权验证</string>
    <string name="daily_start_time">日结开始时间</string>
    <string name="daily_end_time">日结结束时间</string>
    <string name="business_day">营业日</string>
    <string name="designation">名称</string>
    <string name="state">状态</string>
    <string name="wait_for_print">待打印</string>
    <string name="remarks">备注</string>
    <string name="all_test">全部测试</string>
    <string name="scan_the_qr_code_to_complete_the_payment">扫描二维码完成支付</string>
    <string name="version_update">版本更新</string>
    <string name="find_new_version">发现新版本</string>
    <string name="current_version">当前版本</string>
    <string name="time">时间</string>
    <string name="person_count">人数</string>
    <string name="desk_number">桌号</string>
    <string name="odd_number">单号</string>
    <string name="odd_number1">"单号：  "</string>
    <string name="session_type">"市别：  "</string>
    <string name="founding_time">开台时间：</string>
    <string name="founding_staff">开台人：</string>
    <string name="check_staff">结账人：</string>
    <string name="line">行</string>
    <string name="cashier_way">收银方式</string>
    <string name="voucher_number">凭证号</string>
    <string name="total">合计：</string>
    <string name="pd_paid">已付</string>
    <string name="reverse_junction">逆结</string>
    <string name="print_again">重打</string>
    <string name="table">餐桌:</string>
    <string name="consume">消费:</string>
    <string name="minimum_charge">最低消费</string>
    <string name="rounding">抹零</string>
    <string name="tax">消费税</string>
    <string name="discount_package">折扣方案</string>
    <string name="service_fee_without_colon">服务费</string>
    <string name="minimum_charge_without_colon">最低消费</string>
    <string name="receivable">应收</string>
    <string name="already_receive">已收</string>
    <string name="wait_receive">待收</string>
    <string name="acount_pay">应付：</string>
    <string name="cash">现金</string>
    <string name="bank_card">银行卡</string>
    <string name="rechargeable_card">充值卡</string>
    <string name="cash_coupon">代金券</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="free">免单</string>
    <string name="pending_order">挂单</string>
    <string name="full_amount">全额</string>
    <string name="preprinted">预打印</string>
    <string name="temporary_settlement">暂结</string>
    <string name="pay_the_bill">埋 单</string>
    <string name="connect">连接</string>
    <string name="connect_host">连接主机</string>
    <string name="please_input_agent_address">请输入您的代理地址</string>
    <string name="auto_search_agent_address">自动检测</string>
    <string name="equipment_using_initial_registration">设备初次使用登记</string>
    <string name="change_host">更改主机</string>
    <string name="sure_registration">确定登记</string>
    <string name="out_of_stock_management">沽清管理</string>
    <string name="account_bill_query">账单查询</string>
    <string name="reserve_management">预定管理</string>
    <string name="business_transfer">营业交接</string>
    <string name="procurement_management">采购管理</string>
    <string name="device_detection">设备检测</string>
    <string name="store_management">门店管理</string>
    <string name="about_sanyipos">关于食通宝</string>
    <string name="table_name">桌名</string>
    <string name="return_dish">退菜</string>
    <string name="free_dish">赠送</string>
    <string name="change_price">改价</string>
    <string name="closed_time">结账时间</string>
    <string name="salesman">收银员</string>
</resources>