<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60px"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.3" />

    <Button
        android:id="@+id/textView_bill_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@null"
        android:gravity="center"
        android:text="@string/odd_number"
        android:textColor="#333333"
        android:textSize="21px" />

    <Button
        android:id="@+id/textView_table_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/desk_number"
        android:textColor="#333333"
        android:textSize="21px" />

    <Button
        android:id="@+id/textView_people_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/person_count"
        android:textColor="#333333"
        android:textSize="21px" />

    <Button
        android:id="@+id/textView_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@null"
        android:text="@string/amount"
        android:textColor="#333333"
        android:textSize="21px" />

    <Button
        android:id="@+id/textView_salesman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:background="@null"
        android:text="@string/salesman"
        android:textColor="#333333"
        android:textSize="21px" />

    <Button
        android:id="@+id/textView_closed_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:background="@null"
        android:text="@string/closed_time"
        android:textColor="#333333"
        android:textSize="21px" />
</LinearLayout>
