<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/member_manager_group"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@color/member_manager_bg_normal"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/member_recharge"
            style="@style/member_manager_radiobutton"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:drawableLeft="@drawable/member_recharge_selector"
            android:text="@string/member_recharge" />

        <RadioButton
            android:id="@+id/member_create"
            style="@style/member_manager_radiobutton"
            android:drawableLeft="@drawable/member_create_selector"
            android:text="@string/member_create" />

        <RadioButton
            android:id="@+id/member_change_psd"
            style="@style/member_manager_radiobutton"
            android:drawableLeft="@drawable/member_create_selector"
            android:text="@string/member_change_psd" />

        <RadioButton
            android:id="@+id/member_query"
            style="@style/member_manager_radiobutton"
            android:drawableLeft="@drawable/member_query_selector"
            android:text="@string/member_query" />

        <RadioButton
            android:id="@+id/member_recharge_detail"
            style="@style/member_manager_radiobutton"
            android:drawableLeft="@drawable/member_recharge_detail_selector"
            android:text="@string/member_recharge_detail" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/member_frame_layout"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:background="@color/White"
        android:layout_height="match_parent"></FrameLayout>
</LinearLayout>