<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60px"
    android:gravity="center">

    <TextView
        android:id="@+id/textView_bill_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/odd_number"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_table_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center"
        android:text="@string/desk_number"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_payment_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/payment_method"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_payment_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="状态"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#333333"
        android:textSize="21px" />

    <TextView
        android:id="@+id/textView_operator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="操作人"
        android:textColor="#333333"
        android:textSize="21px" />
</LinearLayout>