<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutOrderListRowIngredient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/LightGrey"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/textViewOrderTableName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/table_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewOrderTablePersonCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/person_count"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewOrderTableTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/amount"
        android:textSize="18sp" />
</LinearLayout>
