<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutOrderListRowIngredient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/textViewCheckOrdeRowNo"
        style="@style/OrderBottomLeftFontList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <TextView
        android:id="@+id/textViewCheckOrderDishName"
        style="@style/OrderBottomLeftFontList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:gravity="left"
        android:text="@string/order_name"
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/textViewCheckOrderQuantity"
        style="@style/OrderBottomLeftFontList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=" 0.8"
        android:gravity="right"
        android:text="@string/order_quantity"
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/textViewCheckOrderPrice"
        style="@style/OrderBottomLeftFontList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="right"
        android:text="@string/order_price"
        android:textColor="@color/Red" />

    <TextView
        android:id="@+id/textViewCheckOrderNetPrice"
        style="@style/OrderBottomLeftFontList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="right"
        android:text="@string/order_net_amount" />

</LinearLayout>
